# nampower

./: .gitignore  CMakeLists.txt  DBC_FIELDS.md  EVENTS.md  README.md  SCRIPTS.md  UNIT_FIELDS.md  nampower.map
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: msvc_cmake.yml
loader/: CMakeLists.txt
nampower/: CMakeLists.txt  auras.cpp  auras.hpp  autoattack.cpp  autoattack.hpp  castqueue.h  cdatastore.cpp  chat.cpp  chat.hpp  cooldown.hpp  cooldown_scripts.cpp  cooldown_scripts.hpp  dbc_fields.cpp  dbc_fields.hpp  file_scripts.cpp  file_scripts.hpp  game.cpp  game.hpp  helper.cpp  helper.hpp  item_scripts.cpp  item_scripts.hpp  items.cpp  items.hpp  lua_refs.cpp  lua_refs.hpp  main.cpp  main.hpp  misc_scripts.cpp  misc_scripts.hpp  offsets.hpp  party_member_fields.cpp  party_member_fields.hpp  pet.cpp  pet.hpp  player_scripts.cpp  player_scripts.hpp  quest.cpp  quest.hpp  scripts.cpp  (+17 more)
